Support for snapshots or appending

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,5 +1,6 @@
 QUERY_LIMIT=1000
 BQ_DATASET=DWH
+BQ_DATASET_SNAPSHOTS=DWH_SNAPSHOTS
 BQ_KEY_FILENAME=google-keyfile.json
 BQ_PROJECT_ID=unicorn-985
 RDS_DATABASE=unicorn-metrics
